--- a/compose.yml
+++ b/compose.yml
@@ -42,7 +42,7 @@ services:
       - 15432:5432
     volumes:
       - postgres:/var/lib/postgresql/data
-      - ./local/postgres:/docker-entrypoint-initdb.d
+      - ./database/local:/docker-entrypoint-initdb.d
     environment:
       # postgresの公式イメージを使用する場合、指定が必須となる
       POSTGRES_PASSWORD: password
